sd/sdge/guiao1/store/cbcast/20230308T120339.000Z/node-logs/n2.log
  File "/home/miguel/uni/4ano/sd/sdge/guiao1/causal-broadcast.py", line 40
    match msg.body.type:
          ^
SyntaxError: invalid syntax
